# exercise_library

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml
core/: serializers.py  urls.py  views.py
exercise/: models.py  serializers.py  urls.py  views.py
exercise/migrations/: 0001_initial.py
exercise_library/: settings.py  urls.py  wsgi.py
tests/: conftest.py  factories.py
tests/core/: test_sign_up.py
tests/exercise/: test_create.py  test_list.py  test_retrieve_update_destroy.py
